--- a/03_django/03_MODEL/blog/templates/blog/new.html
+++ b/03_django/03_MODEL/blog/templates/blog/new.html
@@ -4,5 +4,24 @@
 
 {% block content %}
 
+<h1>New Article</h1>
+
+<form action="/blog/create/" method="POST">
+    {% csrf_token %}
+    <div>
+        <label for="title">제목: </label>
+        <input type="text" id="title" name="title">
+    </div>
+
+    <div>
+        <label for="content">내용: </label>
+        <textarea name="content" id="content" cols="30" rows="10"></textarea>
+    </div>
+
+    <div>
+        <input type="submit">
+    </div>
+
+</form>
 
 {% endblock content %}
