--- a/03_django/03_MODEL/templates/base.html
+++ b/03_django/03_MODEL/templates/base.html
@@ -12,10 +12,10 @@
     <nav>
         <ul>
             <li>
-                <a href="/">Home</a>
+                <a href="/blog/">Home</a>
             </li>
             <li>
-                <a href="#">New</a>
+                <a href="/blog/new/">New</a>
             </li>
         </ul>
     </nav>
