--- a/03_django/03_MODEL/blog/templates/blog/edit.html
+++ b/03_django/03_MODEL/blog/templates/blog/edit.html
@@ -3,6 +3,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Edit Article</h1>
 
+<form action="/blog/{{ article.pk }}/update/" method="POST">
+    {% csrf_token %}
+    <div>
+        <label for="title">제목: </label>
+        <input type="text" id="title" name="title" value="{{ article.title }}">
+    </div>
 
+    <div>
+        <label for="content">내용: </label>
+        <textarea name="content" id="content" cols="30" rows="10">{{ article.content }}</textarea>
+    </div>
+
+    <div>
+        <input type="submit">
+    </div>
+
+</form>
 {% endblock content %}
