--- a/03_django/04_FORM/templates/base.html
+++ b/03_django/04_FORM/templates/base.html
@@ -10,10 +10,10 @@
     <nav>
         <ul>
             <li>
-                <a href="/blog/">Home</a>
+                <a href="{% url 'index' %}">Home</a>
             </li>
             <li>
-                <a href="/blog/new/">New</a>
+                <a href="{% url 'create' %}">New</a>
             </li>
         </ul>
     </nav>
