--- a/03_django/00_INTRO/utilities/templates/utilities/check_lotto.html
+++ b/03_django/00_INTRO/utilities/templates/utilities/check_lotto.html
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Your Result</h1>
+{% extends 'base.html' %}
 
-    <h2>{{ result }}</h2>
+{% block content %}
 
-    <p>{{ real_numbers }}</p>
-    <p>bonus: {{ bonus_number }}</p>
-    <hr>
-    <p>{{ lucky_numbers }}</p>
+<h1>Your Result</h1>
 
+<h2>{{ result }}</h2>
 
-</body>
-</html>
+<p>{{ real_numbers }}</p>
+<p>bonus: {{ bonus_number }}</p>
+<hr>
+<p>{{ lucky_numbers }}</p>
+
+{% endblock content %}
