--- a/03_django/00_INTRO/utilities/templates/utilities/get_lotto.html
+++ b/03_django/00_INTRO/utilities/templates/utilities/get_lotto.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Lucky Numbers</h1>
+{% extends 'base.html' %}
 
-    <ul>
-        {% for num in lucky_numbers %}
-        <!-- {{ 출력 }} -->
-        <li>{{ num }}</li>
-        {% endfor %}
-    </ul>
+{% block content %}
+<h1>Lucky Numbers</h1>
 
-
-</body>
-</html>
+<ul>
+    {% for num in lucky_numbers %}
+    <!-- {{ 출력 }} -->
+    <li>{{ num }}</li>
+    {% endfor %}
+</ul>
+{% endblock content %}
