--- a/03_django/00_INTRO/utilities/templates/utilities/this_week.html
+++ b/03_django/00_INTRO/utilities/templates/utilities/this_week.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>This week lotto info</h1>
+{% extends 'base.html' %}
 
-    <ul>
-        {% for num in real_numbers %}
-            <li>{{ num }}</li>
-        {% endfor %}
-    </ul>
+{% block content %}
+<h1>This week lotto info</h1>
 
-    <p>
-        bonus: {{ bonus_number }}
-    </p>
+<ul>
+    {% for num in real_numbers %}
+        <li>{{ num }}</li>
+    {% endfor %}
+</ul>
 
-</body>
-</html>
+<p>
+    bonus: {{ bonus_number }}
+</p>
+{% endblock content %}
