--- a/03_django/05_relation/blog/templates/blog/detail.html
+++ b/03_django/05_relation/blog/templates/blog/detail.html
@@ -20,7 +20,10 @@
     </form>
 </p>
 
-{% include 'blog/_reply_form.html' %}
+{% if request.user.is_authenticated %}
+    {% include 'blog/_reply_form.html' %}
+{% endif %}
+
 {% include 'blog/_reply_list.html' %}
 
 
