--- a/03_django/05_relation/templates/base.html
+++ b/03_django/05_relation/templates/base.html
@@ -7,16 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="{% url 'blog:posting_index' %}">Home</a>
-            </li>
-            <li>
-                <a href="{% url 'blog:create_posting' %}">New Posting</a>
-            </li>
-        </ul>
-    </nav>
+    {% include '_navbar.html' %}
+    
     {% block content %}
     {% endblock content %}
 </body>
