--- a/03_django/05_relation/accounts/templates/accounts/profile.html
+++ b/03_django/05_relation/accounts/templates/accounts/profile.html
@@ -19,46 +19,12 @@
 </form>
 {% endif %}
 
-<h2>작성 글 목록</h2>
-<ul>
-    {% for posting in profile_user.posting_set.all %}
-    <li>
-        <a href="{% url 'blog:posting_detail' posting.pk %}">{{ posting.title }}</a>
-    </li>
-    {% endfor %}
-</ul>
+{% include 'accounts/_profile_postings.html' %}
+{% include 'accounts/_profile_replies.html' %}
 
-<h2>작성 댓글 목록</h2>
-<ul>
-    {% for reply in profile_user.reply_set.all %}
-    <li>
-        <a href="{% url 'blog:posting_detail' reply.posting.pk %}">{{ reply.content }}</a>
-    </li>
-    {% endfor %}
-</ul>
 
 {% if profile_user == request.user %}
-<h2>내가 좋아한 글 목록</h2>
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">제목</th>
-        <th scope="col">작성자</th>
-        <th scope="col">좋아요 개수</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for posting in profile_user.like_postings.all %}
-      <tr>
-        <th scope="row">{{ posting.pk }}</th>
-        <td><a href="{% url 'blog:posting_detail' posting.pk %}">{{ posting.title }}</a></td>
-        <td><a href="{% url 'accounts:profile' posting.user %}">{{ posting.user }}</a></td>
-        <td>{{ posting.like_users.count }}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+{% include 'accounts/_profile_like_postings.html' %}
 {% endif %}
 
 
