--- a/03_django/05_relation/accounts/templates/accounts/signup.html
+++ b/03_django/05_relation/accounts/templates/accounts/signup.html
@@ -1,17 +1,16 @@
 <!-- accounts/signup.html -->
 {% extends 'base.html' %}
+{% load bootstrap5 %}
 
 {% block content %}
 <h1>Sign Up</h1>
 
 <form method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% bootstrap_form form %}
     
-    <p>
-        <button>signup</button>
-    </p>
+    <div>
+        <button class="btn btn-primary">signup</button>
+    </div>
 </form>
-
-
 {% endblock content %}
