--- a/03_django/05_relation/blog/templates/blog/detail.html
+++ b/03_django/05_relation/blog/templates/blog/detail.html
@@ -12,14 +12,14 @@
 {% if request.user == posting.user %}
 <p>
     <a href="{% url 'blog:update_posting' posting.pk %}">
-        <button>수정</button>
+        <button class="btn btn-warning">수정</button>
     </a>
 </p>
 
 <p>
     <form action="{% url 'blog:delete_posting' posting.pk %}" method="POST">
         {% csrf_token %}
-        <button>삭제</button>
+        <button class="btn btn-danger">삭제</button>
     </form>
 </p>
 {% endif %}
@@ -29,7 +29,17 @@
     <!-- 좋아요 UI -->
     <form action="{% url 'blog:like_posting' posting.pk %}" method="POST">
         {% csrf_token %}
-        <button>{{ button_text }}</button>
+        {% if is_like %}
+        <button class="btn btn-primary">
+            <i class="bi bi-hand-thumbs-up"></i>
+            좋아요 취소
+        </button>
+        {% else %}
+        <button class="btn btn-light">
+            <i class="bi bi-hand-thumbs-up"></i>
+            좋아요
+        </button>
+        {% endif %}
         ({{ posting.like_users.count }})
     </form>
     <!-- 댓글 작성 폼 -->
@@ -38,6 +48,5 @@
     
 <!-- 댓글 리스트 -->
 {% include 'blog/_reply_list.html' %}
-
 
 {% endblock content %}
