--- a/03_django/05_relation/templates/_navbar.html
+++ b/03_django/05_relation/templates/_navbar.html
@@ -1,33 +1,35 @@
 <!-- _navbar.html -->
-<nav>
-    <ul>
-        <!-- 인증 여부 상관 없이 보임 -->
-        <li>
-            <a href="{% url 'blog:posting_index' %}">Home</a>
-        </li>
-        <!-- 인증(로그인)된 사용자라면 -->
-        {% if request.user.is_authenticated %}
-        <li>
-            <a href="{% url 'blog:create_posting' %}">New Posting</a>
-        </li>
-        <li>
-            <a href="{% url 'accounts:signout' %}">Logout</a>
-        </li>
-        <li>
-            <a href="{% url 'accounts:profile' request.user %}">
-                {{ request.user }}'s Profile
-            </a>
-        </li>
-        <!-- 인증(로그인)되지 않은 사용자라면 -->
-        {% else %}
-        <li>
-            <a href="{% url 'accounts:signin' %}">Login</a>
-        </li>
-        <li>
-            <a href="{% url 'accounts:signup' %}">Signup</a>
-        </li>
-        {% endif %}
-    </ul>
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+        <ul class="navbar-nav">
+            <!-- 인증 여부 상관 없이 보임 -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'blog:posting_index' %}">Home</a>
+            </li>
+            <!-- 인증(로그인)된 사용자라면 -->
+            {% if request.user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'blog:create_posting' %}">New Posting</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:signout' %}">Logout</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:profile' request.user %}">
+                    {{ request.user }}'s Profile
+                </a>
+            </li>
+            <!-- 인증(로그인)되지 않은 사용자라면 -->
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:signin' %}">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:signup' %}">Signup</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
 </nav>
 
 <!--
